--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,7 +5,7 @@
     <title>List of Pet Owners</title>
 </head>
 <body>
-    <h1 th:text="'List of Owners'">Owners List</h1>
+    <h1 th:text="'List of Pet Owners'">Owners List</h1>
 
 </body>
 </html>
