--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,7 +5,25 @@
     <title>List of Pet Owners</title>
 </head>
 <body>
-    <h1 th:text="'List of Pet Owners'">Owners List</h1>
+<!--/*@thmesVar id="owner" type="com.example.petclinicdata.model.Owner"*/-->
+    <h1 th:text="'List of Owners'">Owners List</h1>
+
+    <table>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="owner : ${owners}">
+            <td th:text="${owner?.id}">1</td>
+            <td th:text="${owner?.firstName}">Joe</td>
+            <td th:text="${owner?.lastName}">Buck</td>
+        </tr>
+        </tbody>
+    </table>
 
 </body>
 </html>
